Updated to latest state

--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
-<html>
+<html lang="en">
     <head>
-        <meta http-equiv=”Content-Type” content=”text/html; charset=UTF-8”/>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
         <title>Vishnudev - Developer | Designer</title>
         <meta name="description" content="I'm a final year Computer Science undergrad at Sir MVIT, Bangalore with great passion for programming and designing.">
         <meta name="keywords" content="Developer, Vishnudev, Vishnu dev, Sir MVIT, Bangalore, Sir M Visvesvaraya Institute of Technology, Portfolio">
         <meta name="author" content="Vishnudev">
         <meta name=”google” content=”notranslate”/>
-        <script type="text/javascript">
-            if (document.images) {
-                img1 = new Image();
-                img1.src = "loading-min.gif";
-            }
-        </script>
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
         <!--Import Google Icon Font-->
-        <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Josefin+Slab|Yesteryear|Allura" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display&display=swap|Josefin+Slab|Yesteryear|Allura" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
         <!--Import materialize.css-->
         <link rel="stylesheet" href="css/materialize.min.css">
@@ -31,16 +25,16 @@
         </div>
 
         <div class="row content" id="contents">
-            <a class="hide-on-small-only" href="https://github.com/vishnu-dev">
+            <a class="hide-on-small-only" href="https://github.com/vishnu-dev" target="_blank">
                 <img style="position: absolute; top: 0; right: 0; border: 0; z-index: 99"
                      src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"
-                     alt="Find me on GitHub"
-                     target="_blank"></a>
+                     alt="Find me on GitHub">
+            </a>
             <div id="navbar" class="col s2 m1 l1 xl1">
                 <a class="row nav-item" href="#home">
                     <div class="nav-logo">
                         <div class="col s12">
-                            <img width="100%" src="png/StripedLogoBlue.png">
+                            <img style="width: 100%" src="png/StripedLogoBlue.png" alt="VishnuLogo">
                         </div>
                     </div>
                 </a>
@@ -105,7 +99,7 @@
                     <div class="col s10 m11 l11 xl11 offset-s2 offset-m1 offset-l1 offset-xl1 no-padding">
                         <div class="row" id="network-background">
                             <div class="col m6 no-padding hide-on-small-only" id="">
-                                <img class="potrait responsive-img" src="png/me.jpg" alt="Myself">
+                                <img class="potrait responsive-img" src="png/vishnu-profile.jpeg" alt="Vishnudev K">
                             </div>
                             <div class="col m6" id="about">
                                 <h1 class="heading-big center-align">About Me</h1>
@@ -114,12 +108,18 @@
                                         <img class="circle responsive-img" src="png/circle.jpg" alt="Myself">
                                     </div>
                                 </div>
-                                <div class="valign-wrapper center-align">
-                                    <p>I'm a final year student at Sir M Visvesvaraya Institute of Technology
-                                        and a passionate developer and designer.</p>
+                                <div class="d-flex justify-content-center align-items-center center-align">
+                                    <p>Hey y'all ! This is Vishnu from Bangalore, India</p>
+                                    <p>
+                                        I have worked in bringing a fresh perspective to Data through Digital
+                                        integration at Sumyag. I have worked extensively on Python, Pandas, Data Analytics, AWS,
+                                        Angular and Nodejs. I started my career at Sumyag as a Data Scientist and have
+                                        worked on all phases of the Product Development and Rollout. I am a developer by
+                                        profession and a designer by passion.
+                                    </p>
                                 </div>
                                 <div class="social-links center-align">
-                                    <p>Find me at</p>
+                                    <p class="heading-big">Find me at</p>
                                     <a href="https://www.linkedin.com/in/vishnu-dev/"><button class="btn-floating btn-large grey lighten-2"><img src="png/linkedin.png" alt="linkedin"></button></a>
                                     <a href="https://github.com/vishnu-dev/"><button class="btn-floating btn-large cyan"><img src="png/github.png" alt="github"></button></a>
                                     <a href="https://www.facebook.com/devvishnuu/"><button class="btn-floating btn-large grey lighten-4"><img src="png/facebook.png" alt="facebook"></button></a>
@@ -140,18 +140,19 @@
                             <h1 class="heading-big center-align">Experience</h1>
                             <div class="col m4 s11 offset-m4">
                                 <div class="card js-tilt row row-eq-height" data-tilt>
-                                    <div class="col m4 no-padding" id="logo">
+                                    <div class="col m4 no-padding card-logo">
                                         <div class="card-image">
-                                            <img src="png/SumyagLogoFinalColored.png">
+                                            <img src="https://s3.ap-south-1.amazonaws.com/sumyag.com.resources/logo/sumyag_logo_colored.png" alt="SumyagLogo">
                                         </div>
                                     </div>
                                     <div class="col m8 no-padding">
-                                        <div class="card-content">
-                                            <span class="card-title bold">Sumyag</span>
+                                        <div class="card-content p-1">
+                                            <span class="card-title bold">Sumyag Data Sciences</span>
                                             <p class="bold">
                                                 Data Scientist
                                             </p>
                                             <p>July 2018 - Present</p>
+                                            <p><a href="https://www.sumyag.com" target="_blank">Website</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -159,13 +160,13 @@
                             <div class="row">
                                 <div class="col m3 s11 offset-m2">
                                     <div class="card js-tilt row row-eq-height" data-tilt>
-                                        <div class="col m4 no-padding" id="logo">
+                                        <div class="col m4 no-padding card-logo">
                                             <div class="card-image">
-                                                <img src="png/crowdproduct.png">
+                                                <img src="png/crowdproduct.png" alt="CrowdProductLogo">
                                             </div>
                                         </div>
                                         <div class="col m8 no-padding">
-                                            <div class="card-content">
+                                            <div class="card-content p-1">
                                                 <span class="card-title bold">CrowdProduct</span>
                                                 <p class="bold">
                                                     Web Developement Intern
@@ -177,16 +178,16 @@
                                 </div>
                                 <div class="col m3 s11 offset-m2">
                                     <div class="card js-tilt row row-eq-height" data-tilt>
-                                        <div class="col m4 no-padding" id="logo">
+                                        <div class="col m4 no-padding card-logo">
                                             <div class="card-image">
-                                                <img src="png/sumyag.png">
+                                                <img src="png/sumyag.png" alt="SumyagOldLogo">
                                             </div>
                                         </div>
                                         <div class="col m8 no-padding">
-                                            <div class="card-content">
-                                                <span class="card-title bold">Sumyag</span>
+                                            <div class="card-content p-1">
+                                                <span class="card-title bold">Sumyag Insights</span>
                                                 <p class="bold">
-                                                    DataScience and IoT Intern
+                                                    Data Science Intern
                                                 </p>
                                                 <p>Jan 2018 - May 2018</p>
                                             </div>
@@ -253,7 +254,7 @@
                                         www.vishnudev.me with appropriate and specific direction to the original content.</p>
                                 </div>
                                 <div class="modal-footer">
-                                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                                    <a href="#" class="modal-close waves-effect waves-green btn-flat">Agree</a>
                                 </div>
                             </div>
                             <div class="col s12 m6">
@@ -261,7 +262,7 @@
                                 <div class="col s11 m6">
                                     <div class="card js-tilt " data-tilt>
                                     <div class="card-image">
-                                        <img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Morphylogo-blue.png">
+                                        <img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Morphylogo-blue.png" alt="MorphyLogo">
                                         <span class="card-title bold">MORPHY</span>
                                     </div>
                                     <div class="card-content">
@@ -392,8 +393,8 @@
             </section>
             <section class="wrapper" id="photography">
                 <div class="row">
+                    <h1 class="heading-big">Photography</h1>
                     <div class="col s10 m11 l11 xl11 offset-s2 offset-m1 offset-l1 offset-xl1">
-                        <h1 class="heading-big">Photography</h1>
                         <div class="hide-on-small-only large carousel">
                             <a class="carousel-item" href="#one!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/1.jpg"></a>
                             <a class="carousel-item" href="#two!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/2.jpg"></a>
@@ -404,16 +405,16 @@
                             <a class="carousel-item" href="#seven!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/7.jpg"></a>
                             <a class="carousel-item" href="#eight!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/8.jpg"></a>
                         </div>
-                        <div class="show-on-small-only carousel">
-                            <a class="carousel-item" href="#one!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/1.jpg"></a>
-                            <a class="carousel-item" href="#two!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/2.jpg"></a>
-                            <a class="carousel-item" href="#three!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/3.jpg"></a>
-                            <a class="carousel-item" href="#four!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/4.jpg"></a>
-                            <a class="carousel-item" href="#five!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/5.jpg"></a>
-                            <a class="carousel-item" href="#six!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/6.jpg"></a>
-                            <a class="carousel-item" href="#seven!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/7.jpg"></a>
-                            <a class="carousel-item" href="#eight!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/8.jpg"></a>
-                        </div>
+<!--                        <div class="show-on-small-only carousel">-->
+<!--                            <a class="carousel-item" href="#one!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/1.jpg"></a>-->
+<!--                            <a class="carousel-item" href="#two!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/2.jpg"></a>-->
+<!--                            <a class="carousel-item" href="#three!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/3.jpg"></a>-->
+<!--                            <a class="carousel-item" href="#four!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/4.jpg"></a>-->
+<!--                            <a class="carousel-item" href="#five!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/5.jpg"></a>-->
+<!--                            <a class="carousel-item" href="#six!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/6.jpg"></a>-->
+<!--                            <a class="carousel-item" href="#seven!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/7.jpg"></a>-->
+<!--                            <a class="carousel-item" href="#eight!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/8.jpg"></a>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </section>
@@ -426,7 +427,7 @@
         </script>
         <script type="text/javascript" src="js/materialize.min.js"></script>
         <script src="js/pageSwitch.js"></script>
-        <script src="js/tilt.jquery.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
 
         <script>
             $(document).ready(function(){
