--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <title>Vishnudev | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="I’m a full-stack developer and a data science enthusiast from Kerala, 🇮🇳.
+  <meta name="description" content="I’m a full-stack developer and a data science enthusiast from Kerala, India.
     For the past 3 years, I have worked with startups to transform their ideas into reality.
     I specialise in the design and development of applications that derive meaningful insights
     from data, visualise them in a user-friendly manner and assist in the making of business decisions." />
   <meta name="author" content="Vishnudev" />
-  <meta name="keywords" content="Developer, Data Scientist, Full stack developer, Vishnudev, Vishnu dev, Sir MVIT, Bangalore, Sir M Visvesvaraya Institute of Technology, Portfolio">
+  <meta name="keywords" content="Developer, Data Scientist, Full stack developer, Vishnudev, Vishnu dev, Sir MVIT, Bangalore, Sir M Visvesvaraya Institute of Technology, Portfolio" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,9 +21,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="main.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 
 <body>
