--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <!-- Hotjar Tracking Code for https://vishnudev.in -->
   <script>
     (function(h,o,t,j,a,r){
