Added new project and fixed responsiveness of project component; Skills and certifications component upgraded; React router added

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     -->
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
   <!-- Hotjar Tracking Code for https://vishnudev.in -->
   <script>
     (function(h,o,t,j,a,r){
